fixing some ui issues and changing text on the home page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -99,8 +99,8 @@
                 <!-- title content -->
                 <div class="container heading-content">
                     <div class="row">
-                        <div class="col col-12 col-lg-6">
-                            <h4 class="upper-heading-text">Productos de electrónica</h4>
+                        <div class="col col-12 col-lg-6 ">
+                            <h4 class="upper-heading-text">electrónica y robótica</h4>
                             <h1>La Mejor Tienda de productos de electrónica</h1>
                             <!-- <p>los mejores productos en electronica a precios buenos para tus proyectos profesionales Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             </p> -->
