--- a/views/marketplace/product.hbs
+++ b/views/marketplace/product.hbs
@@ -114,9 +114,9 @@
                                     
                                 </div>
 
-                                <div class="col col-12 col-lg-5 ps-4 pt-3 pt-lg-1">
+                                <div class="col col-12 col-lg-5 ps-0 ps-lg-4 pt-3 pt-lg-1">
                                     <div class="row text-center text-lg-start">
-                                        <h3 class="card-title text-capitalize fw-semibold">{{name}}</h3>
+                                        <h2 class="card-title text-capitalize fw-normal">{{name}}</h2>
                                     </div>     
                                     <hr>
                                     <div class="row ">
@@ -196,14 +196,14 @@
                             {{/with}}
                         </div>
                         <div class="row mb-3">
-                            <h2>Descripción</h2>
+                            <h3>Descripción</h3>
                             <hr>
                             {{#each p_categories}}
                                 <p class="">{{description}}</p>                                         
                             {{/each}}
                         </div>
                         <div class="row">
-                            <h2>Marcas Reconocidas</h2>
+                            <h3>Marcas Reconocidas</h2>
                             <hr>
                         </div>
                         <div id="brands" class="row mb-5">
