--- a/views/admin/products/edit_category.hbs
+++ b/views/admin/products/edit_category.hbs
@@ -68,7 +68,7 @@
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="" for="">Descripción</label>
-                                            <textarea class="form-control" name="description" placeholder="Una breve despripción sobre que tipo de productos contendra esta categoría." id="exampleFormControlTextarea1" rows="7">{{category.description}}</textarea>
+                                            <textarea class="form-control" name="description" placeholder="Una breve despripción sobre que tipo de productos contendra esta categoría." id="exampleFormControlTextarea1" maxlength="600" rows="8">{{category.description}}</textarea>
                                         </div>
                                         
                                         
