--- a/views/admin/clientsNcustomers/add_employee.hbs
+++ b/views/admin/clientsNcustomers/add_employee.hbs
@@ -56,7 +56,7 @@
                 {{/if}}
                 <div class="container pt-2">
                     <div class="row">
-                        <div class="col-md-4 mx-auto">
+                        <div class="col col-10 col-sm-8 col-lg-6 col-xl-4 mx-auto">
                             <div class="card">
                                 <div class="card-body">
                                     <form action="/admin/add_employee" method="POST">
