--- a/views/admin/clientsNcustomers/edit_client.hbs
+++ b/views/admin/clientsNcustomers/edit_client.hbs
@@ -73,7 +73,7 @@
 
                 <div class="container p-4">
                     <div class="row">
-                        <div class="col-md-4 mx-auto">
+                        <div class="col col-10 col-sm-8 col-lg-6 col-xl-4 mx-auto">
                             <div class="card">
                                 <div class="card-body">
                                     <form action="/admin/edit_client/{{client.id}}" method="POST">
