--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -61,7 +61,7 @@
             
                 <div class="container p-4">
                     <div class="row">
-                        <div class="col-md-4 mx-auto">
+                        <div class="col col-10 col-sm-8 col-lg-6 col-xl-4 mx-auto">
                             <div class="card">
                                 <img src="/images/products/no image.jpg" id="new_pr_img" class="card-img-top" alt="sube una imagen">
                                 <div class="card-body">
@@ -84,13 +84,13 @@
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="" for="">Nombre del Producto</label>
-                                            <input type="text" name="product_name" class="form-control" placeholder="Nombre" maxlength="50">
+                                            <input type="text" name="product_name" class="form-control" placeholder="Nombre" maxlength="50" required>
                                         </div>
                                         <div class="form-group pb-3 ">
                                             <label class="" for="">Precio</label>
                                             <div class="input-group mb-3">
                                                 <span class="input-group-text" id="basic-addon2">Bs</span>
-                                                <input type="number" name="price" class="form-control" placeholder="Precio" value="1" step=".01" min="1">
+                                                <input type="number" name="price" class="form-control" placeholder="Precio" value="1" step=".01" min="1" required>
                                             </div>
                                             <!-- {{!-- <textarea name="description" rows="2" class="form-control"
                                                             placeholder="Description"></textarea> --}} -->
@@ -98,7 +98,7 @@
                                         <div class="form-group pb-3">
                                             <label for="">Stock</label>
                                             <input type="number" name="stock" class="form-control" placeholder="Stock" value="1"
-                                                min="1">
+                                                min="1" required>
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="form-check-label" for="">Categorias</label>
