--- a/views/admin/products/edit_product.hbs
+++ b/views/admin/products/edit_product.hbs
@@ -61,7 +61,7 @@
             
                 <div class="container p-4">
                     <div class="row">
-                        <div class="col-md-4 mx-auto">
+                        <div class="col col-10 col-sm-8 col-lg-6 col-xl-4 mx-auto">
                             <div class="card">
                                 <img src="{{product.img_dir}}" id="new_pr_img" class="card-img-top" alt="sube una imagen">
                                 <div class="card-body">
