fixing ui problem in the home admin page, fixing filtering rumbering problem in the orders page

--- a/views/admin/a_home.hbs
+++ b/views/admin/a_home.hbs
@@ -53,7 +53,7 @@
                 <div class="container-fluid cards-container px-0 pb-5">
                     {{#with stats}}
                     <div class="row h-100">
-                        <div class="col col-12 col-md-4 mb-3">
+                        <div class="col col-12 col-md-6 col-lg-4 mb-3">
                             <!-- Card -->
                             <a href="/admin/orders/filter/new" style="text-decoration: inherit">
                                 <div class="card border-0 h-100 shadow card-n-orders">
@@ -66,7 +66,7 @@
                                         <div class="row h-100 justify-content-between">
                                             <div class="col-9 d-flex flex-column text-center">
                                                 <!-- Subtitle -->
-                                                <h2 class="mb-0 mt-auto display-5 pb-2">{{new}} ordenes</h2>
+                                                <h2 class="mb-0 mt-auto display-5 pb-2 text-nowrap">{{new}} ordenes</h2>
                                                 <!-- Comment -->
                                                 
                                             </div>
@@ -76,7 +76,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col col-12 col-md-4 mb-3">
+                        <div class="col col-12 col-md-6 col-lg-4 mb-3">
                             <!-- Card -->
                             <a href="/admin/orders/filter/ready-to-pay" style="text-decoration: inherit">
                                 <div class="card border-0 h-100 shadow card-orders">
@@ -89,7 +89,7 @@
                                         <div class="row h-100 justify-content-between">
                                             <div class="col-9 d-flex flex-column text-center">
                                                 <!-- Subtitle -->
-                                                <h2 class="mb-0 mt-auto display-5 pb-2">{{ready_to_pay}} ordenes</h2>
+                                                <h2 class="mb-0 mt-auto display-5 pb-2 text-nowrap">{{ready_to_pay}} ordenes</h2>
                                                 <!-- Comment -->
                                 
                                             </div>
@@ -99,7 +99,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col col-12 col-md-4 mb-3">
+                        <div class="col col-12 col-md-6 col-lg-4 mb-3 mx-auto">
                             <a href="/admin/products/out_of_stock" style="text-decoration: inherit">
                                 <!-- Card -->
                                 <div class="card border-0 h-100 shadow card-out-stock">
@@ -112,7 +112,7 @@
                                         <div class="row h-100 justify-content-between">
                                             <div class="col-9 d-flex flex-column text-center">
                                                 <!-- Subtitle -->
-                                                <h2 class="mb-0 mt-auto display-5 pb-2"> {{out_of_stock}} productos</h2>
+                                                <h2 class="mb-0 mt-auto display-5 pb-2 text-nowrap"> {{out_of_stock}} productos</h2>
                                                 <!-- Comment -->
                                 
                                             </div>
