visual corrections on the pagination bar, just visually in the hbs pages

--- a/views/admin/products/categories.hbs
+++ b/views/admin/products/categories.hbs
@@ -114,13 +114,13 @@
                             {{#with pagination_bar}}
                                 <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" href="{{link}}?page=1"><i class="fa-solid fa-angles-left"></i></a></li>
                                 <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" 
-                                    href="{{link}}?page={{previous}}">Anterior</a></li>
+                                    href="{{link}}?page={{previous}}"><span class="d-inline"><i class="fa-solid fa-chevron-left"></i></span><span class="d-none d-md-inline"> Anterior</span></a></li>
                                 {{#each display_nums}}
                                     <li class="page-item {{#if (lookup ../currentPageActive @index)}}active{{/if}}"><a class="page-link" 
                                         href="{{link}}?page={{this}}">{{this}}</a></li>
                                 {{/each}}
                                 <li class="page-item {{#unless next}}disabled{{/unless}}"><a class="page-link" 
-                                    href="{{link}}?page={{next}}">Siguiente</a></li>
+                                    href="{{link}}?page={{next}}"><span class="d-none d-md-inline">Siguiente </span><span class="d-inline"><i class="fa-solid fa-chevron-right"></i></span></a></li>
                                 <li class="page-item {{#unless next}}disabled{{/unless}}"><a class="page-link" href="{{link}}?page={{numberOfPages}}"><i class="fa-solid fa-angles-right"></i></a></li>
                             {{/with}}
                         </ul>
@@ -138,133 +138,3 @@
        
 </body>
 </html>                    
-               
-                                               
-                                                                                                                                                                                                             
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                                                                                                                    
-                                                                                   
-                                   
-                                   
-                                   
-                                   
-                                    
-                                    
-                                    
-                                                                                                                                              
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                        
-                                        
-                                                                                                                                                            
-                                       
-                                       
-                                       
-                                       
-                                        
-                                        
-                                        
-                                        
-                                        
-                                                                                                                                                          
-                    
-                        
-                            
-                        
-                        
-                            
-                        
-                                  
-                                                                                                                                                                         
-                                   
-                                   
-                                   
-                                   
-                                    
-                                    
-                                    
-                                    
-                                                                                                                      
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
-           
-                 
-           
-           
-        
-           
-           
-                      
-        
-        
-        
-    
