--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -146,13 +146,13 @@
                                     {{#with pagination_bar}}
                                         <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" href="/marketplace{{#with filter}}{{#if search}}?search={{search}}&{{/if}}{{#if category}}?category={{category}}&{{/if}}{{else}}?{{/with}}page=1"><i class="fa-solid fa-angles-left"></i></a></li>
                                         <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" 
-                                            href="/marketplace{{#with filter}}{{#if search}}?search={{search}}&{{/if}}{{#if category}}?category={{category}}&{{/if}}{{else}}?{{/with}}page={{previous}}">Anterior</a></li>
+                                            href="/marketplace{{#with filter}}{{#if search}}?search={{search}}&{{/if}}{{#if category}}?category={{category}}&{{/if}}{{else}}?{{/with}}page={{previous}}"><span class="d-inline "><i class="fa-solid fa-chevron-left"></i></span><span class="d-none d-md-inline"> Anterior</span> </a></li>
                                         {{#each display_nums}}
                                             <li class="page-item {{#if (lookup ../currentPageActive @index)}}active{{/if}}"><a class="page-link" 
                                                 href="/marketplace{{#with ../filter}}{{#if search}}?search={{search}}&{{/if}}{{#if category}}?category={{category}}&{{/if}}{{else}}?{{/with}}page={{this}}">{{this}}</a></li>
                                         {{/each}}
                                         <li class="page-item {{#unless next}}disabled{{/unless}}"><a class="page-link" 
-                                            href="/marketplace{{#with filter}}{{#if search}}?search={{search}}&{{/if}}{{#if category}}?category={{category}}&{{/if}}{{else}}?{{/with}}page={{next}}">Siguiente</a></li>
+                                            href="/marketplace{{#with filter}}{{#if search}}?search={{search}}&{{/if}}{{#if category}}?category={{category}}&{{/if}}{{else}}?{{/with}}page={{next}}"><span class="d-none d-md-inline">Siguiente </span><span class="d-inline "><i class="fa-solid fa-chevron-right"></i></span></a></li>
 
                                         <!--{{#with filter}}
                                             <li>filter???</li>
