nav bar correction not selected the correct page, fixing different text in different pages

--- a/views/home/contact.hbs
+++ b/views/home/contact.hbs
@@ -24,7 +24,7 @@
 <body>
     <!-- navbar -->
     
-   {{> navbar}}
+   {{> navbar nav_contact="true"}}
     
     <!-- heading section -->
     <section id="heading-section">
