--- a/views/home/location.hbs
+++ b/views/home/location.hbs
@@ -25,7 +25,7 @@
 <body>
     <!-- navbar -->
     
-    {{> navbar}}
+    {{> navbar nav_contact="true"}}
     
     <!-- heading section -->
     <section id="heading-section">
@@ -41,7 +41,7 @@
             <h3 class="black-version pt-4 pt-lg-0">Nos encontramos en la Avenida Civica entre la calle Calama y la 1ro de Abril, frente a Radio ACLO Potosí.</h3>
             <div class="container-fluid py-4">
                 <div class="row">
-                    <div class="col col-12 col-lg-6">
+                    <div class="col col-12 col-lg-6 px-0 pe-md-2">
                         <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d939.7626445353102!2d-65.7549759!3d-19.5823337!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f94e73f43c9935%3A0x556744dfc89c2ff0!2sAve%20Civica%20736%2C%20Villa%20Imperial%20de%20Potos%C3%AD!5e0!3m2!1ses!2sbo!4v1667078109122!5m2!1ses!2sbo"
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -50,10 +50,11 @@
                     <div class="col col-12 col-lg-6 px-4 pt-4 pt-lg-0 maps-container">
                         <h2 class="black-version">Horarios de atención:</h2>
                         <h3 class="black-version">De Lunes a Viernes:</h3>
-                        <p class="black-version">Mañanas de: 8:00 a.m. a 12:30 p.m.</p>
+                        <p class="black-version">Mañanas de: 9:30 a.m. a 12:30 p.m.</p>
+                        <p class="black-version">Tardes de: 2:00 p.m. a 6:30 p.m.</p>
+                        <h3 class="black-version">Sabados:</h3>
+                        <p class="black-version">Mañanas de: 9:30 a.m. a 12:30 p.m.</p>
                         <p class="black-version">Tardes de: 2:00 p.m. a 6:00 p.m.</p>
-                        <h3 class="black-version">Sabados y Domingos:</h3>
-                        <p class="black-version">De: 8:00 a.m. a 4:30 p.m.</p>
                     </div>
                 </div>
             </div>
