adding some fancy hovers to the home page to make it bright more t firt impression

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -172,7 +172,14 @@
                 <div class="row">
                     <div class="col col-12 col-lg-5 mb-5 mx-auto">
                         <div class="card text-start">
-                            <img src="images/location.jpg" class="card-img-top" alt="...">
+                            <div class="img-card-container position-relative    ">
+                                <a href="/location">
+                                    <img src="images/location.jpg" class="card-img-top" alt="...">
+                                    <div class="middle">
+                                        <div class="on-hover-text">UBICACIÓN</div>
+                                    </div>
+                                </a>
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Nuestra Ubicación</h5>
                                 <p class="card-text dark-text">Nos encontramos en la Calle ...</p>
@@ -181,8 +188,17 @@
                         </div>
                     </div>
                     <div class="col col-12 col-lg-5 mb-5 mx-auto">
-                        <div class="card text-start ">
-                            <img src="images/arduino.jpg" class="card-img-top" alt="...">
+                        <div class="card text-start position-relative">
+                            <div class="img-card-container position-relative    ">
+                                <a href="/contact">
+                                    <img src="images/arduino.jpg" class="card-img-top" alt="...">
+                                    <div class="middle">
+                                        <div class="on-hover-text">CONTACTO</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <a href="/contact">
+                            </a>
                             <div class="card-body">
                                 <h5 class="card-title">Contacto</h5>
                                 <p class="card-text dark-text">Envianos un mensaje ...</p>
