--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -119,6 +119,14 @@ p {
     border-radius: 30%;
 }
 
+.img-feature:hover {
+    height: 10rem;
+    width: 10rem;
+    border: solid 3px #3c8aff;
+    border-radius: 30%;
+}
+
+
 .dwl-button {
     font-weight: 500;
     background-color: white;
@@ -135,7 +143,7 @@ p {
 /* cards section */
 
 .cards-container {
-    background-color: #DFF6FF;
+    background-color: #DFF6FF,#04AA6D;
     /* background-color: #47B5FF; */
     padding: 7% 15% 7%; 
 }
@@ -152,6 +160,39 @@ p {
 .card-img-top {
     width: 100%;
     height: 20vw;
+}
+
+.card-img-top {
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.img-card-container:hover .card-img-top {
+    opacity: 0.3;
+}
+
+.img-card-container:hover .middle {
+    opacity: 1;
+}
+
+.on-hover-text {
+
+    color: gray;
+    font-size: 2.5rem;
+    padding: 16px 32px;
 }
 
 /* catalog section */
