adding hover to the products on marketplace

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,7 +143,7 @@ p {
 /* cards section */
 
 .cards-container {
-    background-color: #DFF6FF,#04AA6D;
+    background-color: #DFF6FF;
     /* background-color: #47B5FF; */
     padding: 7% 15% 7%; 
 }
