--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -104,11 +104,19 @@
                                 {{#unless isDeleted}}
                                 <div class="col col-12 col-md-6 col-xl-4 mb-2 mb-lg-4 mt-2 mt-lg-0">
                                     <div class="card h-100">
-                                        <a href="/marketplace/product/{{id}}">
-                                            <div class="ratio ratio-4x3">
-                                                <img src="{{img_dir}}" class="card-img-top" alt="{{name}}">
+                                        
+                                            <div class="ratio ratio-4x3 img-card-container position-relative">
+                                                <a href="/marketplace/product/{{id}}">
+                                                    <img src="{{img_dir}}" class="card-img-top" alt="{{name}}">
+                                                    <div class="middle">
+                                                        <div class="on-hover-text fs-3 fs-lg-1">VER</div>
+                                                    </div>
+                                                </a>
                                             </div>
-                                        </a>
+                                            {{!-- <div class="ratio ratio-4x3">
+
+                                            </div> --}}
+
                                         <div class="card-body position-relative">
                                             <a href="/marketplace/product/{{id}}"><h5 class="card-title text-capitalize">{{name}}</h5></a>
 
