--- a/public/css/styles_market.css
+++ b/public/css/styles_market.css
@@ -93,6 +93,39 @@ a {
     height: 100%;
 }
 
+.card-img-top {
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.img-card-container:hover .card-img-top {
+    opacity: 0.3;
+}
+
+.img-card-container:hover .middle {
+    opacity: 1;
+}
+
+.on-hover-text {
+
+    color: gray;
+    /* font-size: 2.5rem; */
+    padding: 16px 32px;
+}
+
 /* footer section */
 
 footer {
